# OpenGLStart

./: .gitignore  CMakeLists.txt  readme.md
src/: main.cpp
